# gioppler

./: CHANGELOG.adoc  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.adoc  FUNDING.yml  LICENSE  LICENSE.adoc  README.adoc  README.md
doc/: notes.adoc
include/gioppler/: config.hpp  contract.hpp  counter.hpp  gioppler.hpp  histogram.hpp  platform.hpp  profile-old.hpp  program.hpp  record.hpp  sink.hpp  thread.hpp  utility.hpp
include/gioppler/linux/: config.hpp  counter.hpp  platform.hpp
sample/: matrices.cpp  matrix_mult.cpp  simple.cpp  threads.cpp
test/: gioppler_test.cpp
wip/: README.adoc  notes.adoc
wip/experiments/: anteater.hpp  breakpoint.cpp  constructor.cpp  counter.ods  filters.cpp  histogram.cpp  invariant.cpp  json-target.cpp  matrix.cpp  output.csv  pmc.c  requires.cpp  streambuf.cpp  test.cpp  test2.cpp  timestamp.cpp  tokenizer.cpp
